*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8842 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -77,6 +77,8 @@ pluralFormRuleID=pluralFormRule1
 #Transferlistfilters
 
 #Filter
+Filters.days=ימים
+Filters.stars=כוכבים
 
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
@@ -84,6 +86,9 @@ pluralFormRuleID=pluralFormRule1
 
 #Transfer prices
 
+match.type.league=ליגה
+match.type.cup=גביע
+match.type.friendly=משחק ידידות
 
 
 #Skills
@@ -99,54 +104,166 @@ pluralFormRuleID=pluralFormRule1
 
 
 
+Leadership=מנהיגות
+Leadership.abbr=מנ'
+Experience=ניסיון
+
+Form=כושר משחק
+Form.abbr=כ"מ
 
 
 
+Yellow_card=כרטיס צהוב
+Yellow_card.abbr=צ'
+Red_card=כרטיס אדום
+Red_card.abbr=א'
 
+Speciality=התמחות
+Speciality.abbr=מ"נ
 
-
+Last_match=המשחק האחרון
+Last_match.abbr=אחרון
 #following string uses pluralForms
 
+Bruised=חבול
+Bruised.abbr=חב'
+Injured=פצוע
+Injured.abbr=פצוע
+
+Salary=שכר
+Salary.abbr=שכר
 
 
+NrOfMatches=כמות המשחקים
+NrOfMatches.abbr=מש'
+LeagueGoals=שערי ליגה
+LeagueGoals.abbr=ש"ל
+CupGoals=שערי גביע
+CupGoals.abbr=ש"ג
+FriendliesGoals=שערי ידידות
+FriendliesGoals.abbr=ש"י
+CareerGoals=שערים בקריירה
+CareerGoals.abbr=שע'
+Hattricks=שלושערים
+Hattricks.abbr=של'
 
+Current_club=המועדון הנוכחי
+Current_club.abbr=מועדון
+Current_league=ליגה נוכחית
+Current_league.abbr=ליגה
 
+JoinedSince=הצטרף מאז
+JoinedSince.abbr=מאז
 
+Hotlist=רשימה חמה
+Hotlist.abbr=ברשימה החמה
 
-
+skilltable.youthplayer=שחקן נוער
 
 #matchdetail
+foxtrick.matchdetail.midfield=קישור
+foxtrick.matchdetail.attack=התקפה
+foxtrick.matchdetail.defence=הגנה
+foxtrick.matchdetail.total=סה"כ
+foxtrick.shortcut.matchlineup=הרכב
 
+foxtrick.matchdetail.right=ימין
+foxtrick.matchdetail.left=שמאל
+foxtrick.staffconfirmationsack=האם אתה מעוניין לפטר את %num %kind?
+foxtrick.ntremoveconfirmation=האם באמת ברצונך להוסיף/להסיר שחקן זה מהנבחרת שלך?
+foxtrick.conferences.signaturetoggle=חתימה
+foxtrick.tweaks.selectplayer=בחר שחקן
+foxtrick.linkscustom.selecticon=בחר סמל
+foxtrick.linkscustom.addpersonallink=הוספת קישור אישי
+foxtrick.linkscustom.addlink=הוספת קישור
+foxtrick.linkscustom.remove=הסר
+foxtrick.linkscustom.copy=העתק
+foxtrick.linkscustom.export=יצא
+foxtrick.linkscustom.confirmremove=בטוח להסיר?
+foxtrick.linkscustom.addtag=הוספת תגית
+foxtrick.linkscustom.tags=תגיות
+foxtrick.linkscustom.help=עזרה
+foxtrick.matches.income=הכנסה\:
+foxtrick.tweaks.Birthdays=ימי הולדת
+foxtrick.tweaks.BirthdayToday=ימי הולדת היום
+foxtrick.tweaks.BirthdayLastWeek=ימי הולדת בשבוע האחרון
+foxtrick.tweaks.BirthdayNextWeek=ימי הולדת בשבוע הבא
 
+foxtrick.defensiveTrainer=מאמן %s אשר מעדיף משחק הגנתי.
+foxtrick.offensiveTrainer=מאמן %s אשר מעדיף משחק התקפי.
+foxtrick.balancedTrainer=מאמן %s אשר איננו בעל העדפה מיוחדת.
 
 #following string uses pluralForms
 #following string uses pluralForms
 
+htLive=האט לייב
 
+HTLanguageChanged=פוקסטריק זיהה שינוי שפה. שפת פוקסטריק היא %s.
 
+Coach=מאמן
+CurrentSquad=הקבוצה הקיימת
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
+foxtrick.tweaks.actions=פעולות
+foxtrick.tweaks.writeinguestbook=כתוב בספר האורחים
+foxtrick.tweaks.copyplayerad=העתק נתוני שחקן
+
+ratings.HatStats=האטסטטס
+ratings.LoddarStats=לודאר
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=LoddarStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
 
 
-
+CopyYouth.trainingReport=העתק דו"ח אימון
+CopyYouth.trainingReport.copied=דו"ח האימון הועתק
 CopyYouth.scoutComment=העתק הערת מגלה כשרונות
+CopyYouth.scoutComment.copied=הערת מגלה הכשרונות הועתקה
+CopyYouth.playerSource=העתק נתוני שחקן בקוד מקור
+CopyYouth.playerSource.copied=קוד מקור של השחקן הועתק
+CopyYouth.goto=לך ל-%s
 
+MatchReportFormat.MatchReport=דו"ח המשחק
+MatchReportFormat.lineup=הרכב
+MatchReportFormat.kickOff=בעיטת הפתיחה
+MatchReportFormat.halfTime=מחצית
+MatchReportFormat.extraTime=תוספת זמן
 
 
 
 #matches
+foxtrick.matches.left=שמאל
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
+copy.table=העתק את הטבלה ב-HT-ML
 
 #teampopups
+Manager=מנהל
+Team=קבוצה
+Matches=משחקים
+Players=שחקנים
+Guestbook=ספר אורחים
+SendMessage=שלח הודעה
+Achievements=הישגים
+TransferHistory=היסטוריית העברות
+NextMatch=המשחק הבא
+less=פחות...
 
 
 # FlagCollectionToMap
+foxtrick.FlagCollectionToMap.ShowMap=הצג מפה
+foxtrick.FlagCollectionToMap.HideMap=הסתר מפה
+foxtrick.FlagCollectionToMap.Africa=אפריקה
+foxtrick.FlagCollectionToMap.Asia=אסיה
+foxtrick.FlagCollectionToMap.Europe=אירופה
+foxtrick.FlagCollectionToMap.MEast=המזרח התיכון
+foxtrick.FlagCollectionToMap.SAmerica=דרום אמריקה
 
 # SkillTable
 
@@ -171,18 +288,31 @@ maximum=מקסימום
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 
 # SkillTable
+foxtrick.SkillTable.detach=נתק
 
 # HTMSPrediction
+HTMSPrediction.prediction=תוצאה צפויה
+HTMSPrediction.changePrediction=שנה תחזית
+HTMSPrediction.team=קבוצה
 
 #htms table of statistical truth
+truthTable.predicted_position=\#
+truthTable.name=קבוצה
+truthTable.real_points=נקודות בפועל
+truthTable.predicted_points=נקודות צפויות
+truthTable.difference=±
 
 # HTMSPoints
+HTMSPoints=נקודות HTMS\:
 
 # CrossTable
+CrossTable.graph=גרף עונתי
 # will be shown as "R13" denoting round 13
+CrossTable.noMatches=טרם שוחקו משחקים.
 
 # MyMonitor
 #following string uses pluralForms
+MyMonitor.add=עקוב אחר קבוצה זו
 # %n, %t and %i will be replaced by team name, type and ID respectively
 
 # MarkAllAsRead
