--- a/content/locale/vi/foxtrick.properties
+++ b/content/locale/vi/foxtrick.properties
@@ -33,7 +33,7 @@ foxtrick.AttVsDef.oldstyle.desc=Kiểu cũ
 foxtrick.AttVsDef.newstyle.desc=Kiểu mới
 #Ratings
 foxtrick.Ratings.desc=Thêm phần đánh giá ở trang trận đấu
-foxtrick.BookmarkAdjust.desc=Thay đổi biểu tượng gắn với mục đánh dấu trang ở mục bình luận đánh dấu bởi những đoạn mã liên lạc trong ngoặc vuông\: e.g. [xanh đen] sẽ hiện biểu tượng xanh đen. Những giá trị có thể\: xanh nước biển, B, đen, xanh, nâu, xanh đen, tím sậm, xanh lá cây, xanh nhạt, xanh lá cây nhạt, cam, hồng, tím, đỏ, trắng, vàng
+foxtrick.BookmarkAdjust.desc=Thay đổi biểu tượng gắn với mục đánh dấu trang ở mục bình luận đánh dấu bởi những đoạn mã liên lạc trong ngoặc vuông\: e.g. [cyan] sẽ hiện biểu tượng xanh đen. Những giá trị có thể\: aqua, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
 #MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Hiện giá chuyển nhượng trung bình ở trang so sánh chuyển nhượng
 foxtrick.FlagCollectionToMap.desc=Hiện bản đồ thế giới và lá cờ tất cả các nước bạn thu thập được ở mỗi mục
@@ -283,7 +283,6 @@ foxtrick.TableSort.desc=Làm cho tất cả các bảng  'hợp lệ' có thể 
 foxtrick.ExtraShortcuts.statistics=Chi tiết
 foxtrick.ExtraShortcuts.transfers=Chuyển nhượng
 foxtrick.ExtraShortcuts.prefs=Tùy chọn
-foxtrick.ExtraShortcuts.ftprefs=FoxTrick preferences
 
 #HistoryStats
 foxtrick.HistoryStats.season=mùa giải
@@ -387,7 +386,6 @@ ForumSpecialBBCode.article=Thêm ID bài báo
 ForumSpecialBBCode.clock=Thêm thời gian thực
 ForumSpecialBBCode.spoiler=Thêm spoiler
 ForumSpecialBBCode.pre=Thêm định dạng đuôi 'pre'
-ForumSpecialBBCode.table=Insert 'table' format tags resp. convert selected text into a table (Lines are converted in rows. Text separated by "%s" will be converted into cells.)
 ForumSpecialBBCode.tableSeparator=Chuyển đổi "%s" thành các ô
 ForumSpecialBBCode.enterSeparator=Nhập vào bộ chia tùy chọn
 
