*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8844 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -29,7 +29,10 @@ pluralFormRuleID=pluralFormRule1
 #ExtendedPlayerDetails
 #ExtraShortcuts
 #CopyMatchID
+foxtrick.LeagueNewsFilter.lineup_changes.desc=הצג שינויים בהרכב בלבד
 #MoveManagerOnline
+foxtrick.TeamPopupLinks.LastLineup.desc=הרכב אחרון
+foxtrick.TeamPopupLinks.Coach.desc=מאמן
 #YouthSkillHideUnknown
 #HighlightCupwins
 #CountryList
@@ -42,6 +45,8 @@ pluralFormRuleID=pluralFormRule1
 #Embed Media
 
 #icons
+foxtrick.ExtraShortcuts.transfers=העברות
+foxtrick.ExtraShortcuts.prefs=העדפות
 
 #HistoryStats
 
@@ -58,6 +63,7 @@ pluralFormRuleID=pluralFormRule1
 
 
 #Newsfeed filter
+foxtrick.LeagueNewsFilter.lineup_changes=שינויים בהרכב
 
 # FoxtrickAddLeaveConfButton
 
@@ -68,6 +74,7 @@ pluralFormRuleID=pluralFormRule1
 
 #Forums
 
+ForumYouthIcons.labelTournament=טורנירים
 
 
 #special bbcode, not really youth icons
@@ -111,6 +118,7 @@ Experience=ניסיון
 Form=כושר משחק
 Form.abbr=כ"מ
 
+Loyalty=נאמנות
 
 
 Yellow_card=כרטיס צהוב
@@ -253,6 +261,7 @@ SendMessage=שלח הודעה
 Achievements=הישגים
 TransferHistory=היסטוריית העברות
 NextMatch=המשחק הבא
+LastLineup=הרכב אחרון
 less=פחות...
 
 
@@ -286,6 +295,9 @@ minimum=לכל הפחות
 maximum=מקסימום
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+Youth=﻿נוער
+Tournaments=טורנירים
+Tournament=טורניר
 
 # SkillTable
 foxtrick.SkillTable.detach=נתק
@@ -314,6 +326,7 @@ CrossTable.noMatches=טרם שוחקו משחקים.
 #following string uses pluralForms
 MyMonitor.add=עקוב אחר קבוצה זו
 # %n, %t and %i will be replaced by team name, type and ID respectively
+MyMonitor.type.youth=נוער
 
 # MarkAllAsRead
 
