--- a/content/locale/sl/foxtrick.properties
+++ b/content/locale/sl/foxtrick.properties
@@ -36,7 +36,17 @@ foxtrick.Ratings.GardierStats.desc=GardierStats
 #MedianTransferPrice
 foxtrick.StaffMarker.HT-Youthclub.desc=Označi HT-Youthclub osebje
 #ForumYouthIcons
+foxtrick.ForumYouthIcons.q.desc=Doda ikono za citat, če manjka
 foxtrick.ForumYouthIcons.user_id.desc=Doda ikono za UserID
+foxtrick.ForumYouthIcons.kit_id.desc=Doda ikono za KitID
+foxtrick.ForumYouthIcons.article_id.desc=Doda ikono za ArticleID
+foxtrick.ForumYouthIcons.line_br.desc=Doda ikono za prelom vrstice
+foxtrick.ForumYouthIcons.clock.desc=Doda ikono za dejanski čas
+foxtrick.ForumYouthIcons.spoiler.desc=Doda ikono za skrivača
+foxtrick.ForumYouthIcons.youth_player.desc=Doda ikono za YouthPlayerID
+foxtrick.ForumYouthIcons.youth_team.desc=Doda ikono za YouthTeamID
+foxtrick.ForumYouthIcons.youth_match.desc=Doda ikono za YouthMatchID
+foxtrick.ForumYouthIcons.youth_series.desc=Doda ikono za YouthSeriesID
 foxtrick.ForumYouthIcons.debug.desc=Doda ikono za FoxTrickov dnevnik razhroščevanja
 foxtrick.ForumYouthIcons.settings.desc=Doda ikono za FoxTrick nastavitve
 foxtrick.ForumYouthIcons.tournament.desc=Doda ikono za TournamentID
@@ -62,15 +72,20 @@ foxtrick.LinksClubTransfers.desc=Doda nekaj zunanjih povezav na stran s prestopi
 foxtrick.ForumAlterHeaderLine.TruncateLeagueName.desc=Pokaže samo divizijo.
 foxtrick.ConfirmActions.StaffChange.desc=Najemanje/odpuščanje osebja
 foxtrick.HTThreadMarker.desc=Označi nitke, ki so jih ustvarili HT-ji
+foxtrick.TeamStats.desc=Pripravi pregled igralcev ekipe.
 foxtrick.TeamStats.General.desc=Splošne informacije (TSI/starost)
 foxtrick.TeamStats.Speciality.desc=Posebnost
 foxtrick.TeamStats.Personality.desc=Osebnost
 foxtrick.TeamStats.Status.desc=Stanje (kartoni/poškodbe)
 foxtrick.TeamStats.Current_league.desc=Trenutna liga
+foxtrick.ExtraPlayerInfo.desc=Pokaži dodatne informacije o igralcih na strani z igralci.
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Pokaži informacije o nekdanjih in sedanjih trenerjih.
 foxtrick.ExtraPlayerInfo.Flag.desc=Pokaži narodnosti igralcev kot zastavice.
 foxtrick.SeniorTeamShortCuts.AllPages.desc=Pokaži na vseh straneh
 #ExtendedPlayerDetails
+foxtrick.ExtendedPlayerDetails.SD.desc=Prikaži trajanje pogodbe v sezonah - dneh
+foxtrick.ExtendedPlayerDetails.WD.desc=Prikaži trajanje pogodbe v tednih - dneh
+foxtrick.ExtendedPlayerDetails.D.desc=Prikaži trajanje pogodbe v dnevih
 foxtrick.ExtendedPlayerDetailsWage.desc=Pokaže plačo brez bonusa in/ali brez sezonske plače
 foxtrick.ExtendedPlayerDetailsWage.WageWithoutBonus.desc=Pokaže plače brez bonusa
 foxtrick.ExtendedPlayerDetailsWage.SeasonWage.desc=Pokaže sezonske plače
@@ -78,12 +93,19 @@ foxtrick.SimplePresentation.liveHighlightRed.desc=Poudari nove dogodke rdeče v 
 foxtrick.SimplePresentation.HideAchievementsIcons.desc=Skrije ikone na strani z dosežki
 foxtrick.SimplePresentation.NoLogo.desc=Skrije ekipne logotipe
 foxtrick.SimplePresentation.Highlight_Staff_On_All_Pages.desc=Poudari HT osebje na vseh straneh
+foxtrick.ForumPresentation.Forum_Link_Grey_Icons.desc=Prikaži ikone namesto besedilnih povezav v nogi foruma
+foxtrick.CurrencyConverter.desc=Pretvarjanje HT valute
 #ExtraShortcuts
 foxtrick.ExtraShortcuts.Supporterstats.desc=Povezava na statistiko suporterjev
 foxtrick.ExtraShortcuts.Prefs.desc=Povezava na stran z nastavitvami
 foxtrick.ExtraShortcuts.ManageCHPP.desc=Povezava na CHPP-jevo stran z nastavitvami
 foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Povezava na FoxTrickovo stran z nastavitvami
+foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
+foxtrick.ExtraShortcuts.No9.desc=No9 Radio
+foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
+foxtrick.ExtraShortcuts.Downtime.desc=Downtime Radio
 #CopyMatchID
+foxtrick.HeaderFix.FixLeft.desc=Prav tako popravi podmeni med pomikanjem
 foxtrick.ElectionTable.desc=Doda odstotke volitveni tabeli (samo prikazani glasovi so šteti)
 foxtrick.ContextMenuCopy.Id.desc=Možnost za kopiranje ID
 foxtrick.ContextMenuCopy.Table.desc=Možnost za kopiranje tabele v HT-ML
@@ -92,8 +114,10 @@ foxtrick.NewMail.NotifyMail.desc=Pokaže obvestilo, če dobite novo pošto
 foxtrick.CopyYouth.desc=Funkcije za kopiranje za mladinska sporočila in igralce
 foxtrick.CopyYouth.TrainingReport.desc=Poročilo s treninga
 foxtrick.CopyYouth.ScoutComment.desc=Skavtov komentar
+foxtrick.PlayerBirthday.desc=Pokaže zadnje in prihajajoče rojstne dneve v pregledu igralcev
 foxtrick.LeagueNewsFilter.all.desc=Pokaži vse novice
 foxtrick.LeagueNewsFilter.transfers.desc=Pokaži samo prestope
+foxtrick.LeagueNewsFilter.lineup_changes.desc=Pokaži samo spremembe v postavitvi
 #MoveManagerOnline
 foxtrick.TeamPopupLinks.Matches.desc=Tekme
 foxtrick.TeamPopupLinks.Players.desc=Igralci
@@ -127,6 +151,7 @@ foxtrick.LiveAlert.Sound.desc=Tudi zvočno opozorilo
 foxtrick.SeriesFlags.Guestbook.desc=Pokaži v knjigi gostov
 foxtrick.HTMSPoints.AddToPlayer.desc=Pokaži na igralčevi strani
 foxtrick.HTMSPoints.AddToPlayerList.desc=Pokaži na strani igralcev
+foxtrick.FriendlyInterface.desc=Popravki, ki zagotavljajo prijaznejši vmesnik
 foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Skrij tajnika, če nima ničesar za sporočiti
 foxtrick.MyMonitor.TeamIcons.desc=Pokaži ekipne grbe
 foxtrick.ShowLineupSet.LineupSet.desc=Poudari ekipe, ki so že nastavile postavitve
@@ -134,7 +159,9 @@ foxtrick.ShowLineupSet.Ownerless.desc=Poudari ekipo brez lastnika
 foxtrick.ShowLineupSet.Winning.desc=Poudari zmagovalno ekipo
 foxtrick.SupporterStatsEnhancements.desc=Poudari trenutno ekipo v statistiki suporterjev
 foxtrick.MobileEnhancements.desc=Nabor izboljšav za mobilne naprave
+foxtrick.MatchOrderInterface.desc=Popravki na vmesniku za oddajo ukazov za tekmo.
 foxtrick.MatchOrderInterface.Specialties.desc=Pokaži posebnosti igralcev
+foxtrick.MatchSimulator.RatingsOnTop.desc=Obdrži napovedi ocen na vrhu
 foxtrick.MatchSimulator.RatingsBelow.desc=Prikaži napovedi spodaj
 foxtrick.RatingsDisplay.desc=Prikaže povprečne ocene v drugačnem slogu
 foxtrick.RatingsDisplay.HatStats.desc=Kot HatStati
@@ -156,7 +183,11 @@ foxtrick.ExtraShortcuts.ftprefs=FoxTrick nastavitve
 
 #HistoryStats
 foxtrick.HistoryStats.season=Sezona
+foxtrick.HistoryStats.season.short=Sez
 foxtrick.HistoryStats.cup=Krog pokala
+foxtrick.HistoryStats.cup.short=Pok
+foxtrick.HistoryStats.league=Serija
+foxtrick.HistoryStats.league.short=Ser.
 foxtrick.HistoryStats.pos.short=P
 foxtrick.HistoryStats.label=Statistična zgodovina
 foxtrick.HistoryStats.cupwinner=Zmagovalec pokala
@@ -218,8 +249,12 @@ show_templates=Pokaži predloge
 hide_templates=Skrij predlogo
 template_exists=Predloga že obstaja ali pa je prazna
 template_title=Naslov predloge\:
+delete_template_ask=Ali želite izbrisati predlogo?
 
 #PostPreview
+show_preview_from_post=Prikaži predogled napisanega
+preview=Predogled
+forumPreview.send=Pošlji
 
 #Forums
 CopyPosting.style.ht-ml=HT-ML
@@ -230,6 +265,8 @@ ForumYouthIcons.youthplayerid=Vstavi oznako mladinca.
 ForumYouthIcons.youthteamid=Vstavi oznako mladinske ekipe.
 ForumYouthIcons.youthmatchid=Vstavi oznako mladinske tekme.
 ForumYouthIcons.youthseries=Vstavi oznako mladinske lige.
+ForumYouthIcons.tournamentid=Vstavi oznako turnirja.
+ForumYouthIcons.tournamentmatchid=Vstavi oznako tekme na turnirju.
 
 ForumOtherIcons.label=Drugo
 ForumOtherIcons.debug=Vstavi FoxTrickov dnevnik razhroščevanja.
@@ -242,6 +279,7 @@ ForumSpecialBBCode.user=Dodaj userID
 ForumSpecialBBCode.kit=Dodaj kitID
 ForumSpecialBBCode.article=Dodaj articleID
 ForumSpecialBBCode.clock=Dodaj trenutni čas
+ForumSpecialBBCode.spoiler=Dodaj skrivača
 
 
 ShowNestedQuotes=Pokaži ugnezdene citate  
@@ -305,6 +343,7 @@ Winger=Krila
 Scoring=Napad
 Passing=Podaje
 Passing.abbr=PS
+Defending=Obramba
 Defending.abbr=DF
 Keeper=Vratar
 Keeper.abbr=KP
@@ -388,7 +427,7 @@ Red_card.abbr=D
 Speciality=Posebnost
 
 Last_match=Zadnja tekma
-Last_position=Najnovejši položaj
+Last_position=Zadnji položaj
 Last_position.abbr=Pos
 #following string uses pluralForms
 Last_match_didnot_play=Še ni igral.
@@ -468,6 +507,7 @@ foxtrick.balancedTrainer=%s trener, ki ni niti napadalno niti obrambno usmerjen.
 #following string uses pluralForms
 notify.newMail=Prejeli ste %s sporočilo.;Prejeli ste %s sporočili.;Prejeli ste %s sporočila.;Prejeli ste %s sporočil.
 #following string uses pluralForms
+notify.newForumMessage=Obstaja %s nov odgovor na forumu, namenjen vam.;Obstajata %s nova odgovora na foruma, namenjena vam.;Obstajajo %s novi odgovori na forumu, namenjeni vam.;Obstaja %s novih odgovorov na forumu, namenjenih vam.
 
 htLive=HT Live
 
@@ -722,6 +762,7 @@ status.unknown.abbr=?
 oauth.authorize=Dovolite FoxTricku da dostopa do podatkov o vaši ekipi
 oauth.why=Zakaj bi moral odobriti FoxTrick?
 oauth.link=Pridobi potrditveno kodo iz chpp.hattrick.org
+oauth.success=FoxTrick je bil uspešno pooblaščen\! Prosimo, osvežite stran, da si ogledate obsežnejše informacije o FoxTricku.
 
 api.serverUnavailable=Strežnik ni na voljo
 
@@ -759,6 +800,7 @@ foxtrick.prefs.setup.dateFormat=Oblika datuma
 foxtrick.prefs.setup.country=Država
 
 foxtrick.prefs.captionCleanupBranch=Shranjene nastavitve
+foxtrick.prefs.labelCleanupBranch=Obnovi privzete nastavitve (samo nastavitve, ne osebne nastavitve.)
 # NOTE - please preserve the braces, inner content will be converted to link
 foxtrick.prefs.labelDisableAll=Onemogoči vse module
 foxtrick.prefs.labelRevokePermissions=Prekliči vsa neobvezna dovoljenja (samo Chrome)
