*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8854 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sl/foxtrick.properties
+++ b/content/locale/sl/foxtrick.properties
@@ -245,6 +245,7 @@ leave_conf_button=Zapusti forum
 forum.preferences=Nastavitve foruma
 
 # ForumTemplates
+make_template_from_post=Ustvari predlogo iz prispevka
 show_templates=Pokaži predloge
 hide_templates=Skrij predlogo
 template_exists=Predloga že obstaja ali pa je prazna
@@ -259,6 +260,7 @@ forumPreview.send=Pošlji
 #Forums
 CopyPosting.style.ht-ml=HT-ML
 CopyPosting.style.wiki=wiki
+CopyPosting.style.last=zadnje
 
 ForumYouthIcons.labelTournament=Turnirji
 ForumYouthIcons.youthplayerid=Vstavi oznako mladinca.
@@ -280,6 +282,7 @@ ForumSpecialBBCode.kit=Dodaj kitID
 ForumSpecialBBCode.article=Dodaj articleID
 ForumSpecialBBCode.clock=Dodaj trenutni čas
 ForumSpecialBBCode.spoiler=Dodaj skrivača
+ForumSpecialBBCode.forumSymbol=Vstavi "%s"
 
 
 ShowNestedQuotes=Pokaži ugnezdene citate  
@@ -295,6 +298,7 @@ Filters=Filtri
 Filters.filter=V redu
 Filters.clear=Počisti
 Filters.noFilter=Brez filtra
+Filters.none=Noben
 Filters.days=Dnevi
 Filters.tsi=TSI
 Filters.stamina=Vzdržljivost
@@ -425,8 +429,11 @@ Red_card=Rdeč karton
 Red_card.abbr=D
 
 Speciality=Posebnost
+Speciality.abbr=Pos
 
 Last_match=Zadnja tekma
+Last_match.abbr=Zadnja
+Last_stars=Najnovejše zvezdice
 Last_position=Zadnji položaj
 Last_position.abbr=Pos
 #following string uses pluralForms
@@ -461,6 +468,7 @@ Current_club.abbr=Klub
 Current_league=Trenutna liga
 Current_league.abbr=Liga
 
+JoinedSince=Pridružen od
 JoinedSince.abbr=Od
 
 Hotlist=Vroča lista
@@ -476,6 +484,8 @@ foxtrick.matchdetail.defence=Obramba
 foxtrick.matchdetail.total=Skupno
 foxtrick.shortcut.matchlineup=postavitev
 
+foxtrick.matchdetail.right=Desno
+foxtrick.matchdetail.left=Levo
 foxtrick.matchdetail.leftshort=L
 foxtrick.tlconfirmation=Ali res želite dodati tega igralca na seznam prestopov? Izklicna cena je %s.
 foxtrick.staffconfirmationhire=Ali želite najeti %num %kind?
@@ -559,6 +569,13 @@ foxtrick.tweaks.youthstatistics=Mladinska statistika ht-ys.org
 
 #matches
 foxtrick.matches.attackdefensebars=Napad proti obrambi
+foxtrick.matches.right=Desno
+foxtrick.matches.left=Levo
+foxtrick.matches.center=Osrednje
+foxtrick.matches.defense=obr
+foxtrick.matches.attack=nap
+foxtrick.matches.indfreekick=Indir. prosti streli
+foxtrick.matches.wronglang=FoxTrick\: Statistike ni mogoče prikazati, ker vaš jezik ni registriran ali, ker imate nastavljen napačen jezik v nastavitvah. Prosimo, prepričajte se, da je vaš jezik v FoxTricku enak jeziku v Hattricku.
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
@@ -569,8 +586,10 @@ foxtrick.matches.suppstats=Statistika suporterjev
 copy.id=Kopiraj %s\: %i
 copy.link=Kopiraj mesto povezave v HT-ML
 copy.ht-ml=Kopiraj v HT-ML
+copy.table=Kopiraj tabelo v HT-ML
 
 #teampopups
+Manager=Uporabnik
 Team=Ekipa
 Matches=Tekme
 Players=Igralci
@@ -616,6 +635,7 @@ Player.abbr=Igralec
 Age=Starost
 Age.abbr=Starost
 Match=Tekma
+Series=Serija
 
 TransferCompare=Primerjava prestopov
 TransferCompare.abbr=TC
@@ -657,7 +677,7 @@ foxtrick.SkillTable.detach=Odpni
 # HTMSPrediction
 HTMSPrediction.prediction=Predviden rezultat
 HTMSPrediction.winDrawLoss=zmaga/remi/poraz
-HTMSPrediction.title=HTMS-ova analiza tekme
+HTMSPrediction.title=HTMS analiza tekme
 HTMSPrediction.changePrediction=Spremeni napoved
 HTMSPrediction.team=Ekipa
 
