*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8856 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -248,6 +248,7 @@ Tournament=Tournament
 
 # SkillTable
 foxtrick.SkillTable.Add_homegrown_title=Adds all homegrown players from the current senior squad
+foxtrick.SkillTable.showTimeInClub_title=Shows time since player joined the club's senior squad
 
 # HTMSPrediction
 
