--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -29,6 +29,8 @@ pluralFormRuleID=pluralFormRule1
 #ExtendedPlayerDetails
 #ExtraShortcuts
 #CopyMatchID
+foxtrick.SeasonStats.desc=הצגת סטטיסטיקה מסוימת בדפי ארכיון המשחקים
+foxtrick.LeagueNewsFilter.transfers.desc=הצג רק העברות
 foxtrick.LeagueNewsFilter.lineup_changes.desc=הצג שינויים בהרכב בלבד
 #MoveManagerOnline
 foxtrick.TeamPopupLinks.LastLineup.desc=הרכב אחרון
