--- a/content/locale/tr/foxtrick.properties
+++ b/content/locale/tr/foxtrick.properties
@@ -1082,6 +1082,7 @@ status.unknown=Bilinmeyen
 status.unknown.abbr=?
 
 oauth.authorize=Takım verilerinize erişmek için FoxTrick'i yetkilendir
+oauth.instructions=Biraz sonra aşağıda chpp.hattrick.org 'a bir baglanti görünecektir.Link'i açınız, onaylama kodu almak için kullanıcı adınızı ve şifrenizi giriniz. Onaylama kodunuzu Foxtrick'in takımınızın verilerine ulaşabilmesi için aşağıdaki giriş kutusuna giriniz.Bu süreçte Foxtrick sizin şifrenizi bilmeyecektir.
 oauth.why=FoxTrick'i neden yetkilendirmeliyim?
 oauth.link=chpp.hattrick.org adresinden doğrulama kodunu alın
 oauth.success=FoxTrick başarılı bir şekilde yetkilendirilmiş\! Lütfen FoxTrick tarafından sağlanan kapsamlı bilgileri görüntülemek için bu sayfayı yeniden yükleyin.
