*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8860 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -30,6 +30,8 @@ pluralFormRuleID=pluralFormRule1
 #ExtraShortcuts
 #CopyMatchID
 foxtrick.SeasonStats.desc=הצגת סטטיסטיקה מסוימת בדפי ארכיון המשחקים
+foxtrick.LeagueNewsFilter.desc=מסנן המציג חדשות ליגה מסוג מסוים
+foxtrick.LeagueNewsFilter.all.desc=הצג את כל החדשות
 foxtrick.LeagueNewsFilter.transfers.desc=הצג רק העברות
 foxtrick.LeagueNewsFilter.lineup_changes.desc=הצג שינויים בהרכב בלבד
 #MoveManagerOnline
@@ -356,6 +358,7 @@ sort.down=למטה
 action.clearCache=נקה מטמון
 
 # fennec ui
+pageAction.leftSidebar=\ הצג את כל החדשות
 pageAction.all=הצג הכל
 
 # buttons
