*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8862 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-CR/foxtrick.properties
+++ b/content/locale/es-CR/foxtrick.properties
@@ -93,12 +93,12 @@ foxtrick.EmbedMedia.EmbedDailymotionVideos.desc=Incrustar videos deDailymotion
 foxtrick.EmbedMedia.EmbedModeOEmebed.desc=Usar oEmbed para incrustar media (solo para Chrome)
 foxtrick.EmbedMedia.ReplaceLinksByTitles.desc=Reemplazar el texto del enlace por la etiqueta del elemento multimedia, p.ej el nombre de la imagen
 foxtrick.EmbedMedia.EmbedSoundCloud.desc=Insertar desde Soundcloud
-foxtrick.EmbedMedia.EmbedFlickrImages.desc=Insertar imÃ¡genes de Flickr
-foxtrick.EmbedMedia.EmbedDeviantArtImages.desc=Insertar imÃ¡genes de Devianart
-foxtrick.EmbedMedia.EmbedGenericImages.desc=Insertar imÃ¡genes si el enlace conduce a una imagen
-foxtrick.EmbedMedia.EmbedGenericImagesClever.desc=Trata de adivinar la direcciÃ³n correcta de la imagen; incluso si el enlace original, inicialmente, no aparece estar apuntando a una imagen.
+foxtrick.EmbedMedia.EmbedFlickrImages.desc=Insertar imágenes de Flickr
+foxtrick.EmbedMedia.EmbedDeviantArtImages.desc=Insertar imágenes de Devianart
+foxtrick.EmbedMedia.EmbedGenericImages.desc=Insertar imágenes si el enlace conduce a una imagen
+foxtrick.EmbedMedia.EmbedGenericImagesClever.desc=Trata de adivinar la dirección correcta de la imagen; incluso si el enlace original, inicialmente, no aparece estar apuntando a una imagen.
 #Forum direct page links
-foxtrick.DirectPageLinks.desc=Agrega enlaces que te permiten saltar a una pÃ¡gina determinada en un hilo del foro.
+foxtrick.DirectPageLinks.desc=Agrega enlaces que te permiten saltar a una página determinada en un hilo del foro.
 #
 foxtrick.CopyPostID.desc=Enlace para copiar el PostId
 foxtrick.CopyPosting.desc=Añade un icono para copiar el mensaje incluyendo referencias
@@ -129,7 +129,7 @@ foxtrick.LinksAchievements.desc=Añadir algunos enlaces externos a la página de
 foxtrick.LinksStaff.desc=Añadir algunos enlaces externos a la página del Staff
 foxtrick.LinksTracker.desc=Añadir algunos enlaces externos a las correspondientes bases de datos nacionales dentro detro de las páginas de jugadores y selecciones.
 foxtrick.LinksClubTransfers.desc=Añadir algunos enlaces externos a la página de Transferencias
-foxtrick.LoyaltyDisplay.desc=Resalta el efecto de la lealtad y el bono del club madre en tu pÃ¡gina personal del jugador (sÃ³lo funciona con la opciÃ³n "Mostrar barras de habilidades" activada en las preferencias de HT)
+foxtrick.LoyaltyDisplay.desc=Resalta el efecto de la lealtad y el bono del club madre en tu página personal del jugador (sólo funciona con la opción "Mostrar barras de habilidades" activada en las preferencias de HT)
 foxtrick.ForumAlterHeaderLine.desc=Altera el encabezado de los mensajes
 foxtrick.Singleline2.desc=Modulo con encabezado del foro alternativo de una línea. Un poco más rapido que las otras versiones. Deshabilita algunos mensajes del foro conflictivos.
 # please translate next lines again if needed
@@ -157,14 +157,14 @@ foxtrick.ConfirmActions.StaffChange.desc=Contratar/despedir especialistas
 foxtrick.PersonalityImages.desc=Añadir números de colores que reflejen el carácter, honestidad y agresividad en la página del jugador
 foxtrick.HideSignatures.desc=Ocultar la firma en los mensajes del foro y mostrar un enlace de 'Firma' en su lugar
 foxtrick.MarkUnread.desc=Añadir un enlace para resaltar los mensajes no leídos desde el mensaje actual.
-foxtrick.ForumModeratorIconLinks.desc=Agregar iconos para acceder a las funciones del moderador en la parte superior de los hilos, cuando estÃ© disponible
+foxtrick.ForumModeratorIconLinks.desc=Agregar iconos para acceder a las funciones del moderador en la parte superior de los hilos, cuando este disponible
 foxtrick.ForumNextAndPrevious.desc=Eliminar los botones de 'Siguiente' y 'Anterior' en la conferencia si están deshabilitados
 foxtrick.ForumLastPost.desc=Saltar al ultimo mensaje en lugar de saltar al primer mensaje de un tema ya leído
 foxtrick.ForumLastPost.lastpage.desc=Saltar a la última página, no al ultimo mensaje
 foxtrick.MatchPlayerColouring.desc=Colorear los nombres de los jugadores dependiendo de su equipo en el reporte del partido. Usando enlaces en la página del jugador, resalta al jugador solamente.
 foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separar el coloreado del jugador propio
 foxtrick.MatchReportFormat.desc=Presentación del reporte del partido línea por línea, de acuerdo a los eventos del partido.
-foxtrick.MatchReportFormat.ShowEventIcons.desc=Agregar iconos especÃ­fico a un evento.
+foxtrick.MatchReportFormat.ShowEventIcons.desc=Agregar iconos específico a un evento.
 foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Separar el coloreado del equipo propio
 foxtrick.ForumRedirManagerToTeam.desc=Redirige, el enlace del foro, de la página del mánager a la página del usuario/equipo.
 foxtrick.ManagerButtons.desc=Añade o cambia los botones en las páginas del manager y del equipo
@@ -228,7 +228,7 @@ foxtrick.ForumPresentation.moved_avatarinfo_fix.desc=Arregla la descolocación d
 foxtrick.SkinPlugin.desc=Añade tu propio skin CSS para Hattrick
 foxtrick.CurrencyConverter.desc=Convierte una moneda/divisa dentro de Hattrick
 foxtrick.MovePlayerStatement.desc=Coloca las declaraciones del jugador en la imagen del mismo. Si las imágenes estan deshabilitadas, las declaraciones se eliminaran.
-foxtrick.TickerColoring.desc=Los diferentes eventos despelagados en la sección de noticias se verá coloreado.
+foxtrick.TickerColoring.desc=Los diferentes eventos desplegados en la sección de noticias se verá coloreado.
 #ExtraShortcuts
 foxtrick.ExtraShortcuts.desc=Añade un enlace a las Estadísticas de Supporter en los iconos principales
 foxtrick.ExtraShortcuts.AddLeft.desc=Seleccionar para añadir el icono a la izquierda, dejar sin seleccionar para añadirlo a la derecha
@@ -329,13 +329,13 @@ foxtrick.TransferCompareSort.desc=Dando clic en el encabezado, ordena los result
 foxtrick.ForumStripHattrickLinks.desc=Arregla el servidor de los enlaces internos dentro del foro. También añade un espacio en blanco para etiquetas pre i/b/u (Modulo FormatPostingText)
 foxtrick.ForumStripHattrickLinks.NoConfirmStripping.desc=Sin confimación antes de arreglar enlaces
 foxtrick.RapidId.desc=Añade una caja en parte superior de la página para ver equipo, jugador, etc por ID
-foxtrick.YouthSeriesEstimation.desc=En la tabla de resultados de búzqueda,estima el inicio de una liga juvenil que estan en el descanso entre temporadas.
+foxtrick.YouthSeriesEstimation.desc=En la tabla de resultados de búsqueda, estima el inicio de una liga juvenil que están en el descanso entre temporadas.
 foxtrick.LocalTime.desc=Muestra de manera opcional la hora local en lugar de la hora de Hattrick. Dando clic en el reloj, se cambia entre ambas opciones.
 foxtrick.ForumThreadAutoIgnore.desc=Automáticamente ignorar temas del foro con las etiquetas seleccionadas (temas con [Etiqueta] o {Etiqueta})
 foxtrick.ForumThreadAutoIgnore.Tags.desc=Lista de etiquetas, ej\: NT, idea, Bug. Serparadas por coma, sin importar mayúsculas o minúsculas
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lista de temas aceptados por ID (solo la parte antes del punto). Los temas en la lista de aceptados no será ignorada. Separados por coma.
 foxtrick.TableSort.desc=Convierte las tablas 'propiamente realizadas' ordenables, cuando cuenten con encabezado (incluyendo las tablas en los mensajes del foro)
-foxtrick.LiveAlert.desc=Alertar de log goles de HT Live
+foxtrick.LiveAlert.desc=Alertar de los goles de HT Live
 foxtrick.LiveAlert.Sound.desc=Aletar también con un sonido
 foxtrick.OldStyleFace.desc=Mostrar caras en el estilo antiguo
 foxtrick.NtPeek.desc=Vista previa de los partidos de la Selección Nacional Mayor/U20 en Mi Hattrick
@@ -353,14 +353,14 @@ foxtrick.FriendlyInterface.desc=Ajustes para tener una interfaz más amigable
 foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Mostrar el nombre de los jugadores sin elipses en el reporte del partido
 foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Mostrar equipos nacionales como enlaces para los jugadores locales
 foxtrick.FriendlyInterface.HideAnswerTo.desc=Esconder enlaces para responder en el Libro de visitas
-foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Oculatar el secretario de Mi Oficina si no tiene nada nuevo que reportar
-foxtrick.MyMonitor.desc=Monitorea los partidos recientes de tus amigos/enmigos directamente en Mi Hattrick
+foxtrick.FriendlyInterface.HideSpeechlessSecretary.desc=Ocultar el secretario de Mi Oficina si no tiene nada nuevo que reportar
+foxtrick.MyMonitor.desc=Monitorea los partidos recientes de tus amigos/adversarios directamente en Mi Hattrick
 foxtrick.MyMonitor.TeamIcons.desc=Mostrar el logo de los equipos
 foxtrick.MarkAllAsRead.desc=Botón para marcar los temas de todos los foros como leídos
 foxtrick.ShowFriendlyBooked.desc=Mostrar dentro de la tabla de liga, si un equipo a pactado amistoso
 foxtrick.ShowFriendlyBooked.OnDemand.desc=Mostrar unicamente amistosos en demanda
 foxtrick.TickerAlert.desc=Muestra un aviso cuando una nueva notificación (del ticker) ha llegado
-foxtrick.ShowLineupSet.desc=Resaltar equipos que han mandado alineación, y/o equipos son dueños, y/o equipos que ganaron su partido;  dentro de la parte de resutlados en la tabla de liga
+foxtrick.ShowLineupSet.desc=Resaltar equipos que han mandado alineación, y/o equipos sin dueño, y/o equipos que ganaron su partido;  dentro de la parte de resultados en la tabla de liga
 foxtrick.ShowLineupSet.LineupSet.desc=Resaltar equipos que han mandado su alienación
 foxtrick.ShowLineupSet.Ownerless.desc=Resaltar equipos sin dueño
 foxtrick.ShowLineupSet.Winning.desc=Resaltar equipos que ganaron su partido
@@ -571,11 +571,11 @@ match.type.youth.friendly.cup=Amistoso juvenil (Relgas de copa)
 matchOrder.noMatchSelected=Ningún partido seleccionado
 matchOrder.comparedTo=En comparación con\:
 matchOrder.previousPrediction=Predicción previa
-matchOrder.AddMatchManually=Añadir un partido manualmentedd a match manually
+matchOrder.AddMatchManually=Añadir un partido manualmente
 matchOrder.swapPositions=Intermcabiar posiciones
 matchOrder.options=Opciones
 matchOrder.staminaDiscount=Descuento por condición
-matchOrder.staminaDiscount.title=Las calificaciones del sector tienen un descuento de acuerdo a la contribuciÃ³n de los jugadores de ese sector
+matchOrder.staminaDiscount.title=Las calificaciones del sector tienen un descuento de acuerdo a la contribución de los jugadores de ese sector
 matchOrder.summary=Resumen
 
 #Skills
@@ -734,7 +734,7 @@ CareerGoals.abbr=GT
 Hattricks=Hattricks
 Hattricks.abbr=HT
 
-Current_club=Club Actual
+Current_club=Club actual
 Current_club.abbr=Club
 Current_league=Liga Actual
 Current_league.abbr=Liga
@@ -898,8 +898,8 @@ more=más...
 less=menos...
 TeamPopupLinks.prefsCaption=Preferencias de Elnace
 TeamPopupLinks.ShowByDefault=Mostrar por defecto
-TeamPopupLinks.ShowOnMore=Mostrar Más
-TeamPopupLinks.OpenNewTab=Abrir en una nueva pestaÃ±a
+TeamPopupLinks.ShowOnMore=Mostrar más
+TeamPopupLinks.OpenNewTab=Abrir en una nueva pestaña
 
 total_stars=Total de estrellas
 
@@ -936,7 +936,7 @@ Deadline.abbr=Lím
 CurrentBid=Oferta actual
 CurrentBid.abbr=Ofe
 CurrentBidder=Mánager con oferta más alta
-CurrentBidder.abbr=Mángr
+CurrentBidder.abbr=Mángar
 CurrentBidderShort=Oferta más alta
 CurrentBidderShort.abbr=MnOf
 
@@ -1075,8 +1075,8 @@ button.deleteToken=Borrar token
 button.disableAll=Deshabilitar todo
 button.revokePermissions=Revocar los permisos
 
-status.loading=Cargandoâ€¦
-status.loading.abbr=â€¦
+status.loading=Cargando…
+status.loading.abbr=…
 status.error=Error
 status.error.abbr=\!
 status.unknown=Desconocido
@@ -1185,7 +1185,7 @@ prefs.view.by.page=Ver de acuerdo a última página de HT
 delete_foxtrick_branches_ask=¿Estas seguro que deseas restaurar los valores predeterminados de Foxtrick?\nFirefox debe reiniciarse para que los cambios tomen efecto\!
 delete_oauth_ask=¿Estás seguro que deseas borrar el token OAuth para los equipos\: %s? 
 disable_all_foxtrick_modules_ask=¿Estas seguro que deseas deshabilitar todos los módulos?\n
-revoke_permissions_ask=Â¿EstÃ¡s seguro que deseas revocar todos los permisos opcionales?
+revoke_permissions_ask=¿Estás seguro que deseas revocar todos los permisos opcionales?
 
 foxtrick.prefs.AdditionalOptions=Opciones Adicionales
 foxtrick.prefs.smallcopyicons=Mostrar iconos pequeños de copiar en el encabezado en lugar de la caja lateral separada
