--- a/content/locale/ko/release-notes.xml
+++ b/content/locale/ko/release-notes.xml
@@ -14,6 +14,19 @@
 </note>
 
 <note version="0.9.0.2">
+<item><xhtml:b>0.9.0.2 업데이트</xhtml:b></item>
+<item>● LoyaltyDisplay 충돌을 야기시키는 최근 Chrome 업데이트 수정</item>
+<item>● MatchReportFormat의 유소년 선수의 라인업 연결 수정</item>
+<item>● MatchSimulator 체력 효과 변경</item>
+<item>● 특수능력에 대한 새로운 기호</item>
+<item>● 다수의 번역 업데이트</item>
+<item></item>
+<item><xhtml:b>0.9.0.1 업데이트</xhtml:b></item>
+<item>● Chrome의 (우발적인)과도한 권한 수정</item>
+<item>● LiveAlert 수정 </item>
+<item>● 몇 가지 css 이슈 수정(Chrome, Opera, Safari)</item>
+<item></item>
+<item><xhtml:b>0.9 배포</xhtml:b></item>
 <item><xhtml:b>현지화:</xhtml:b></item>
 <item>crowdsourcing 번역 서비스<xhtml:a href="http://www.crowdin.net/project/foxtrick">http://www.crowdin.net</xhtml:a> 통합. (CatzHoek, Convincedd)</item>
 <item>다수의 번역 업데이트. (Catzhoek 과 많은 번역가들: GM-murko, LambdaB, Paulo Francisco Martins, MEO_Comandante, Jānis Pamiljans, GZ-grobas, SI-CH, bigpapy, edzus, silkevicious, Max_Schreck, TheZayc, -Iuve-, Mcload, Polytropos, MrAli, ripaldo, Ryo567, Louzao, kirja, MartinsPF)</item>
