--- a/content/locale/ru/release-notes.xml
+++ b/content/locale/ru/release-notes.xml
@@ -14,7 +14,20 @@
 	</note>
 
 	<note version="0.9.0.2">
-		<item><xhtml:b>Локализация:</xhtml:b></item>
+		<item><xhtml:b>Обновление 0.9.0.2</xhtml:b></item>
+		<item>● Поддержка последних версий Chrome, ранее приводивших к фатальному сбою браузера в модуле <module>LoyaltyDisplay</module>.</item>
+		<item>● Поправлены ссылки на игроков в окне расстановки для юношеских команд в модуле <module>MatchReportFormat</module>.</item>
+		<item>● В модуле <module>MatchSimulator</module> теперь тоже учитывается выносливость игроков.</item>
+		<item>● Новые значки для специализаций.</item>
+		<item>● Несколько обновлений переводов.</item>
+		<item></item>
+		<item><xhtml:b>Обновление 0.9.0.1</xhtml:b></item>
+		<item>● Исправлены (случайно вставленные) избыточныe разрешения для Chrome.</item>
+		<item>● Исправления в модуле <module>LiveAlert</module>.</item>
+		<item>● Исправлены некоторые ошибки CSS (для Chrome, Opera, Safari).</item>
+		<item></item>
+		<item><xhtml:b>Версия 0.9</xhtml:b></item>
+		<item><xhtml:b>Перевод:</xhtml:b></item>
 		<item>Внедрение краудсорсинговой службы перевода <xhtml:a href="http://www.crowdin.net/project/foxtrick">http://www.crowdin.net</xhtml:a> (CatzHoek, Convincedd).</item>
 		<item>Большое количество обновлений переводов (Catzhoek и многие переводчики. Среди прочих: GM-murko, LambdaB, Paulo Francisco Martins, MEO_Comandante, Jānis Pamiljans, GZ-grobas, SI-CH, bigpapy, edzus, silkevicious, Max_Schreck, TheZayc, -Iuve-, Mcload, Polytropos, MrAli, ripaldo, Ryo567, Louzao, kirja, MartinsPF).</item>
 		<item>Спасибо вам всем. Пожалуйста, продолжайте помогать переводить FoxTrick на сайте <xhtml:a href="http://crowdin.net/project/foxtrick">http://crowdin.net/project/foxtrick</xhtml:a>.</item>
