--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -14,6 +14,18 @@
 </note>
 
 <note version="0.9.0.2">
+<item>● Исправка за последњу верзију Chrome због које је модул <module>LoyaltyDisplay</module> блокирао</item>
+<item>● Поправљени линкови до поставе у мечу за омладинце у модулу <module>MatchReportFormat</module></item>
+<item>● <module>MatchSimulator</module> побољшана формула за утицај кондиције</item>
+<item>● Нове иконице за специјалности играча</item>
+<item>● Неколико ажурираних превода</item>
+<item></item>
+<item><xhtml:b>Промене у верзији Фокстрик 0.9.0.1</xhtml:b></item>
+<item>● Поправљене (ненамерне) претеране дозволе за Chrome</item>
+<item>● Поправљен модул <module>LiveAlert</module> </item>
+<item>● Поправке за одређене 'css' проблеме (за Chrome, Opera, Safari)</item>
+<item></item>
+<item><xhtml:b>Промене у верзији Фокстрик 0.9</xhtml:b></item>
 <item><xhtml:b>Означавање активних Фокстрик функција на страници</xhtml:b></item>
 <item>Такође смо убацили и функцију за означавање активних Фокстрик функција како би их лакше препознали и пронашли одговарајуће модуле одговорне за њих. Да укључите или искључите означавање свих Фокстрик опција активних на одређеној страници, кликните на ознаку Фокстрик верзије која се налази у доњем десном углу сваке странице, поред ознаке Хеттрик сервера на којем сте улоговани. Након првог освежавања странице, пређите мишем изнад означених делова да би вам се приказало и име модула који је одговоран за ту функцију.</item>
 <item></item>
@@ -42,11 +54,6 @@
 <item></item>
 <item><xhtml:b>За оне који користе Google Chrome</xhtml:b></item>
 <item>Имплементиран је систем опционих дозвола за Google Chrome. Сада има мање обавезних дозвола потребних за коришћење Фокстрика. Пошто вероватно још нисте подесили ниједну дозволу, потребно је да још једном сачувате своја подешавања и потврдите коју год дозволу за приступ желите да дате. Касније ће Google Chrome тражити од вас да дате дозволу за приступ екстерним ресурсима кад год активирате неки од модула за чије функционисање је то неопходно.</item>
-<item></item>
-<item><xhtml:b>Додатак за верзију 0.9.0.2</xhtml:b></item>
-<item>● Поправљене (ненамерне) претеране дозволе за Chrome</item>
-<item>● Поправљен модул <module>LiveAlert</module> </item>
-<item>● Поправке за одређене 'css' проблеме (за Chrome, Opera, Safari)</item>
 </note>
 
 <note version="0.8.2">
