*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8876 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -26,6 +26,7 @@ pluralFormRuleID=pluralFormRule1
 #Forum direct page links
 #
 # please translate next lines again if needed
+foxtrick.TeamStats.Personality.desc=אישיות
 #ExtendedPlayerDetails
 #ExtraShortcuts
 #CopyMatchID
@@ -35,11 +36,15 @@ foxtrick.LeagueNewsFilter.all.desc=הצג את כל החדשות
 foxtrick.LeagueNewsFilter.transfers.desc=הצג רק העברות
 foxtrick.LeagueNewsFilter.lineup_changes.desc=הצג שינויים בהרכב בלבד
 #MoveManagerOnline
+foxtrick.TeamPopupLinks.Players.desc=﻿שחקנים
+foxtrick.TeamPopupLinks.Guestbook.desc=﻿ספר אורחים
+foxtrick.TeamPopupLinks.TransferHistory.desc=היסטורית העברות
 foxtrick.TeamPopupLinks.LastLineup.desc=הרכב אחרון
 foxtrick.TeamPopupLinks.Coach.desc=מאמן
 #YouthSkillHideUnknown
 #HighlightCupwins
 #CountryList
+foxtrick.LiveAlert.Sound.desc=הצג התראה עם צליל
 
 # -----------------------------------------------------------------------------
 
@@ -58,8 +63,15 @@ foxtrick.ExtraShortcuts.prefs=העדפות
 #following string uses pluralForms
 
 # links
+foxtrick.links.boxheader=קישורים
 
 #teamstats+filters
+foxtrick.TeamStats.label=סקירה קבוצתית
+foxtrick.TeamStats.PlayerNotToOld.label=שחקנים < גיל 19
+foxtrick.TeamStats.PlayerToOld.label=שחקנים \=> גיל 19
+foxtrick.TeamStats.Cards.label=כרטיסים
+foxtrick.TeamStats.Injured.label=פציעות
+foxtrick.TeamStats.TransferListed.label=ברשימת ההעברות
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -67,6 +79,7 @@ foxtrick.ExtraShortcuts.prefs=העדפות
 
 
 #Newsfeed filter
+foxtrick.LeagueNewsFilter.transfers=העברות
 foxtrick.LeagueNewsFilter.lineup_changes=שינויים בהרכב
 
 # FoxtrickAddLeaveConfButton
@@ -88,7 +101,11 @@ ForumYouthIcons.labelTournament=טורנירים
 #Transferlistfilters
 
 #Filter
+Filters=מסננים
+Filters.noFilter=ללא סינון
 Filters.days=ימים
+Filters.XP=ניסיון
+Filters.specialty=התמחות
 Filters.stars=כוכבים
 
 #Locales for date and time
@@ -96,6 +113,7 @@ Filters.stars=כוכבים
 #next 6 use pluralFroms
 
 #Transfer prices
+transfercompare_avgprice=מחיר ממוצע
 
 match.type.league=ליגה
 match.type.cup=גביע
@@ -110,10 +128,15 @@ match.type.friendly=משחק ידידות
 
 
 
+General=כללי
 
 
 
 
+Personality=אישיות
+Agreeability=מידת מקובלות
+Aggressiveness=אגרסיביות
+Honesty=יושר
 
 Leadership=מנהיגות
 Leadership.abbr=מנ'
@@ -180,7 +203,7 @@ foxtrick.matchdetail.total=סה"כ
 foxtrick.shortcut.matchlineup=הרכב
 
 foxtrick.matchdetail.right=ימין
-foxtrick.matchdetail.left=שמאל
+foxtrick.matchdetail.left=שמאלית
 foxtrick.staffconfirmationsack=האם אתה מעוניין לפטר את %num %kind?
 foxtrick.ntremoveconfirmation=האם באמת ברצונך להוסיף/להסיר שחקן זה מהנבחרת שלך?
 foxtrick.conferences.signaturetoggle=חתימה
@@ -241,12 +264,18 @@ MatchReportFormat.MatchReport=דו"ח המשחק
 MatchReportFormat.lineup=הרכב
 MatchReportFormat.kickOff=בעיטת הפתיחה
 MatchReportFormat.halfTime=מחצית
+MatchReportFormat.fullTime=סיום
 MatchReportFormat.extraTime=תוספת זמן
+MatchReportFormat.result=תוצאת המשחק
 
 
 
 #matches
-foxtrick.matches.left=שמאל
+foxtrick.matches.attackdefensebars=הגנה vs התקפה
+foxtrick.matches.right=ימנית
+foxtrick.matches.left=שמאלית
+foxtrick.matches.defense=הגנה
+foxtrick.matches.attack=התקפה
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
@@ -267,6 +296,7 @@ TransferHistory=היסטוריית העברות
 NextMatch=המשחק הבא
 LastLineup=הרכב אחרון
 less=פחות...
+TeamPopupLinks.ShowByDefault=﻿הצג כברירת מחדל
 
 
 # FlagCollectionToMap
@@ -280,7 +310,9 @@ foxtrick.FlagCollectionToMap.SAmerica=דרום אמריקה
 
 # SkillTable
 
+Nationality=אזרחות
 Flag.abbr=דגל
+Player=שחקן
 Player.abbr=שחקן
 Age=גיל
 Age.abbr=גיל
@@ -292,6 +324,9 @@ CurrentBid.abbr=הצע
 
 
 # TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=הסתר שחקנים חבולים
+TransferSearchResultFilters.hideInjured=הסתר שחקנים פצועים
+TransferSearchResultFilters.hideSuspended=הסתר שחקנים מושעים
 TransferSearchResultFilters.days=ימים\:
 
 # refer to transfer search form
@@ -362,7 +397,17 @@ pageAction.leftSidebar=\ הצג את כל החדשות
 pageAction.all=הצג הכל
 
 # buttons
+button.ok=אישור
+button.cancel=ביטול
+button.close=סגור
+button.customize=התאמה אישית
+button.save=שמור
+button.add=הוסף
+button.remove=הסר
+button.authorize=אשר
+button.disableAll=בטל הכל
 
+status.error=שגיאה
 
 
 
@@ -373,23 +418,40 @@ pageAction.all=הצג הכל
 # -----------------------------------------------------------------------------
 # Captions and labels of foxtrick preferences
 
+preferences=העדפות
 # keep the following line untranslated
 
+status.active=פעיל
+status.disabled=לא זמין
 
 
 # tabs in preferences page
 #tabs
+tab.main=ראשי
+tab.forum=פורום
+tab.alert=התראות
+tab.about=אודות
+tab.changes=עדכונים
+tab.help=עזרה
 
 
 # NOTE - please preserve the braces, inner content will be converted to link
+foxtrick.prefs.labelSavePrefs_Prefs=העדפות
+foxtrick.prefs.saved=העדפות נשמרו\!
+
+
+link.title=קישורים
+link.bugTracker=דווח על באג
+link.recentChanges=עדכונים אחרונים
 
 
 
+about.translators=מתרגמים
 
 
+delete_foxtrick_branches_ask=﻿האם אתה בטוח שברצונך לשחזר את הגדרות ברירת המחדל?
 
-
-
+foxtrick.prefs.AdditionalOptions=אפשרויות כלליות
 
 
 ###EOF
