Serbian release notes update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8882 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -13,7 +13,10 @@
 <item>Уколико желите да вам Фокстрик не приказује обавештење о променама после сваког ажурирања искључите опцију "Прикажи поруку о променама после ажурирања Фокстрика" у табу <xhtml:a href="#tab=main">"Главне опције"</xhtml:a>.</item>
 </note>
 
-<note version="0.9.0.2">
+<note version="0.9.0.3">
+<item><xhtml:b>Промене у верзији Фокстрик 0.9.0.3</xhtml:b></item>
+<item>● Само за Stage: Исправке за неколико модула после промена изгледа страница</item>
+<item></item>
 <item>● Исправка за последњу верзију Chrome због које је модул <module>LoyaltyDisplay</module> блокирао</item>
 <item>● Поправљени линкови до поставе у мечу за омладинце у модулу <module>MatchReportFormat</module></item>
 <item>● <module>MatchSimulator</module> побољшана формула за утицај кондиције</item>
