*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8894 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/tr/foxtrick.properties
+++ b/content/locale/tr/foxtrick.properties
@@ -934,7 +934,7 @@ Deadline=Son Tarih
 Deadline.abbr=Son Tarih
 CurrentBid=Geçerli teklif
 CurrentBid.abbr=Teklif
-CurrentBidder=Geçerli en yüksek teklif
+CurrentBidder=Geçerli en yüksek teklifi veren
 CurrentBidder.abbr=Teklif veren
 CurrentBidderShort=Geçerli en yüksek teklif eden
 CurrentBidderShort.abbr=Tk
